[package]
name = "af_xdp_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.24.2"
clap = { version = "4.0.32", features = ["derive"] }
libc = "0.2"
ctrlc = "3.2"

libxdp-sys = { path = "./libxdp-sys" }
xsk-rs = { path = "./xsk-rs" }


[build-dependencies]
libbpf-cargo = "0.24.2"
